--- a/retro-calculator/Base.lproj/LaunchScreen.storyboard
+++ b/retro-calculator/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,8 +17,56 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchbg" translatesAutoresizingMaskIntoConstraints="NO" id="BMd-c5-Ngd">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchground" translatesAutoresizingMaskIntoConstraints="NO" id="zJR-sC-abr">
+                                <rect key="frame" x="0.0" y="457" width="600" height="143"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="zJR-sC-abr" secondAttribute="height" multiplier="600:143" id="wm5-Ja-eeU"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Retro-Calc" translatesAutoresizingMaskIntoConstraints="NO" id="QFa-da-cqy">
+                                <rect key="frame" x="145" y="28" width="311" height="121"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="121" id="1Pr-jD-iZQ"/>
+                                    <constraint firstAttribute="width" secondItem="QFa-da-cqy" secondAttribute="height" multiplier="311:121" id="2dD-VE-IEp"/>
+                                    <constraint firstAttribute="width" constant="311" id="c41-d7-hSf"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="robot" translatesAutoresizingMaskIntoConstraints="NO" id="MBr-ej-Qeb">
+                                <rect key="frame" x="180" y="163" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="0Y0-9P-ANm"/>
+                                    <constraint firstAttribute="height" constant="128" id="ijM-AI-BdM"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="zJR-sC-abr" secondAttribute="bottom" id="Ake-FS-uZO"/>
+                            <constraint firstItem="MBr-ej-Qeb" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="DuL-7N-neS"/>
+                            <constraint firstItem="QFa-da-cqy" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="8" id="Jja-yl-Wia"/>
+                            <constraint firstItem="zJR-sC-abr" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Mtc-ww-JRL"/>
+                            <constraint firstItem="BMd-c5-Ngd" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="OAm-ag-mWo"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="BMd-c5-Ngd" secondAttribute="bottom" id="VGH-BF-zOD"/>
+                            <constraint firstAttribute="trailing" secondItem="zJR-sC-abr" secondAttribute="trailing" id="bNl-XE-xci"/>
+                            <constraint firstAttribute="trailing" secondItem="zJR-sC-abr" secondAttribute="trailing" id="e1X-y5-WdX"/>
+                            <constraint firstItem="BMd-c5-Ngd" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="eEY-n7-42B"/>
+                            <constraint firstItem="QFa-da-cqy" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="jDn-iF-Fo3"/>
+                            <constraint firstItem="zJR-sC-abr" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="jbu-Lj-Wq9"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="zJR-sC-abr" secondAttribute="bottom" id="ohg-zT-4X9"/>
+                            <constraint firstItem="zJR-sC-abr" firstAttribute="top" secondItem="MBr-ej-Qeb" secondAttribute="bottom" constant="166" id="q7s-3H-tjg"/>
+                            <constraint firstAttribute="trailing" secondItem="BMd-c5-Ngd" secondAttribute="trailing" id="rVq-XX-fyx"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Mtc-ww-JRL"/>
+                                <exclude reference="bNl-XE-xci"/>
+                                <exclude reference="Ake-FS-uZO"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +74,10 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Retro-Calc" width="755" height="111"/>
+        <image name="launchbg" width="1433" height="957"/>
+        <image name="launchground" width="999" height="225"/>
+        <image name="robot" width="786" height="402"/>
+    </resources>
 </document>
